k8s/ingress-example.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  labels:
    stable.k8s.psg.io/kcm.class: "default"
  annotations:
    stable.k8s.psg.io/kcm.provider: "googlecloud"
    stable.k8s.psg.io/kcm.email: "admin@psg.io"
    # you can oveerride the acme endpoint from the default via the below annotation
    #stable.k8s.psg.io/kcm.acme-url: "https://acme-staging-v02.api.letsencrypt.org/directory"
spec:
  tls:
  - hosts:
    - psg.io
    secretName: cert-psg.io
  rules:
  - host: "psg.io"
    http:
      paths:
      - path: /hello-world
        backend:
          serviceName: helloworld
          servicePort: 80
